maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:4: error: ':' expected but ',' found.
  def aMurEst(x,y):Boolean ={
               ^JediEscaper:42: error: identifier expected but '}' found.
} 
^